--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,13 @@
+/* Google Fonts */
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap');
+
 /* Common Styles */
 * {
     margin: 0;
     padding: 0;
 }
 body {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Poppins', sans-serif;
     
 }
 .container {
@@ -18,9 +21,54 @@ a {
 .flex {
     display: flex;
 }
+.btn {
+    font-family: 'Poppins', sans-serif;
+    font-weight: 500;
+    font-size: 16px;
+    padding: 10px 24px;
+    color: #FFFFFF;
+    background-color: #E02C6D;
+}
 
 /* hero section style  */
 .hero {
     display: flex;
-    
+    align-items: center;
+    justify-content: space-between;
+    background-color: #2D25A0;
+    padding: 153px 100px 86px 100px;
+}
+.hero-text {
+    margin-right: 100px;
+}
+.hero-text h1 {
+    font-size: 64px;
+    font-weight: 700;
+    color: #FFFFFF;
+}
+.hero-cta {
+    display: inline-block;
+    margin-top: 27px;
+    border: 2px solid transparent;
+    transition: all 0.3s ease-in-out;
+}
+.hero-cta .fa-arrow-right {
+    margin-left: 8px;
+    transition: all 0.3s ease-in-out;
+}
+.hero-cta:hover {
+    background-color: transparent;
+    border: 2px solid #FFFFFF;
+    padding-right: 15px;
+}
+.hero-cta:hover .fa-arrow-right {
+    margin-left: 17px;
+}
+.hero-img img {
+    width: 556px;
+    height: 438px;
+    transition: transform 1s ease-in-out;
+}
+.hero:hover img {
+    transform: rotateY(180deg) scale(1.2) skew(8deg);
 }
