--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,11 @@
-/* Google Fonts */
+/*====================
+    Google Fonts 
+ ============================*/
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap');
 
-/* Common Styles */
+/*=======================
+    Common Styles
+ ======================== */
 * {
     margin: 0;
     padding: 0;
@@ -12,14 +16,12 @@ body {
 }
 .container {
     width: 90%;
-    max-width: 1100px;
+    max-width: 1160px;
     margin: 0 auto;
 }
+
 a {
     text-decoration: none;
-}
-.flex {
-    display: flex;
 }
 .btn {
     font-family: 'Poppins', sans-serif;
@@ -30,16 +32,20 @@ a {
     background-color: #E02C6D;
 }
 
-/* hero section style  */
+/*=======================
+     hero section style 
+========================== */
 .hero {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
     background-color: #2D25A0;
-    padding: 153px 100px 86px 100px;
+    padding: 100px 0;
+}
+.hero .container {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-column-gap: 80px;
 }
 .hero-text {
-    margin-right: 100px;
+    width: 85%;
 }
 .hero-text h1 {
     font-size: 64px;
@@ -64,38 +70,43 @@ a {
 .hero-cta:hover .fa-arrow-right {
     margin-left: 17px;
 }
+.hero-img {
+    width: 100%;
+}
 .hero-img img {
-    width: 556px;
-    height: 438px;
+    width: 100%;
     transition: transform 1s ease-in-out;
 }
 .hero:hover img {
     transform: rotateY(180deg) scale(1.2) skew(8deg);
 }
 
-/* player-board styles */
+/*=======================
+    player-board styles 
+ ==============================*/
 
 #player-board {
-    
     display: flex;
     justify-content: center;
     padding: 70px 0;
 }
-.players {
+#player-board .container {
+    width: 80%;
     max-width: 1050px;
+    margin: 0 auto;
+}
+.players {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-column-gap: 30px;
     grid-row-gap: 27px;
-    
 }
 .player {
     padding: 15px;
     box-shadow: 0px 0px 40px rgba(0, 0, 0, 0.15);
 }
 .player-img img {
-    width: 300px;
-    height: 256px;
+    width: 100%;
 }
 .player-name {
     font-size: 28px;
@@ -110,13 +121,18 @@ a {
     margin: 10px 0px;
 }
 
-/* footer area styles */
+/*========================
+ footer area styles 
+ =============================*/
 footer {
     padding: 63px 0;
     text-align: center;
 }
+footer .logo {
+    width: 100%;
+}
 footer .logo img {
-    width: 485px;
+    width: 35%;
 }
 .social-icons {
     margin: 20px 0;
@@ -149,3 +165,45 @@ footer .logo img {
 .copyright {
     font-size: 18px;
 }
+
+/*========================
+    Media Query
+ =========================== */
+
+ /* for mobile devices */
+
+ @media only screen and (max-width: 480px) {
+    .hero {
+        padding: 25px 0;
+    } 
+    .hero .container {
+         grid-template-columns: 1fr;
+         grid-gap: 50px 0;
+     }
+     
+     .hero-text h1 {
+         font-size: 36px;
+     }
+     .hero-img {
+        text-align: center;
+    }
+    .hero-img img {
+        width: 80%;
+    }
+    #player-board .container {
+        width: 90%;
+    }
+    .players {
+        grid-template-columns: 1fr;
+        grid-column-gap: 0;
+        grid-row-gap: 27px;
+    }
+
+    footer .logo img {
+        width: 50%;
+    }
+   .hero,
+    main {
+        display: none;
+    }
+ }
